--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -124,6 +124,10 @@
 }
 
 @media (max-width: 768px) {
+
+  .products-page {
+  margin: 2.2rem auto 0 auto;
+}
   .page-heading h1 {
     font-size: 2.2rem;
   }
