Update Home page CSS for mobile improvements

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,6 +6,11 @@
   color: #2c3e2e;
 }
 
+/* Remove blue tap highlight on mobile */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
   padding: 0;
